--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+
+<div class="main_body">
+    <div class="login_box">
+        <span class="borderLine"></span>
+        <form action="">
+            <h2>Sign in</h2>
+            <div class="input_box1">
+                <input type="text" name="" id="" required="required">
+                <span>Username</span>
+                <i></i>
+            </div>
+            <div class="input_box2">
+                <input type="text" name="" id="" required="required">
+                <span>Password</span>
+                <i></i>
+            </div>
+            <div class="links">
+                <a href="#">Forgot Password</a>
+                <a href="#">Signup</a>
+            </div>
+            <input type="submit" value="Login">
+        </form>
+    </div>
+</div>
