--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,38 @@
-<p>header works!</p>
+<div class="main_body">
+    <div class="navigation">
+        <ul>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <span class="material-symbols-outlined">home</span>
+                    </span>
+                    <span class="text">Home</span>
+                </a>
+            </li>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <span class="material-symbols-outlined">search</span>
+                    </span>
+                    <span class="text">Search</span>
+                </a>
+            </li>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <span class="material-symbols-outlined">mail</span>
+                    </span>
+                    <span class="text">Request</span>
+                </a>
+            </li>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <span class="material-symbols-outlined">person</span>
+                    </span>
+                    <span class="text">Profile</span>
+                </a>
+            </li>
+        </ul>
+     </div>
+</div>
