--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+
 <div class="main_body">
     <div class="navigation">
         <ul>
@@ -35,4 +36,5 @@
             </li>
         </ul>
      </div>
-</div>
+</div>>
+
