--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+
 .wallpaper{
     margin: 0px;
     padding: 0px;
@@ -50,10 +51,10 @@
     cursor: pointer;
 }
 
-/* wallpaper css style*/
+/* wallpaper css style
 .container{
     background: #000;
-}
+}*/
 .row{
     display: inline-flex;
     margin-top: -32px;
