home page changed

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,79 +1,78 @@
-.main_body{
+.heading{
+    height: 10vh;
+    font-family: 'poppins',sans-serif;
+    background-color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 90px;
+    justify-content: center;
+}
+.head{
+    position: fixed;
     width: 100%;
-    background-color: black;
-}
-.navigation{
-    width: 700px;
-    height: 150px;
-    justify-content: center;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    background: transparent;
+    transition: all .50s ease;
     align-items: center;
-    position: relative;
-    display: flex;
-    align-items:center;
-    border-radius: 10px;
-
+    justify-content: end;
+    height: 10vh;
 }
-.navigation ul
-{
+.logo{
     display: flex;
-    width: 350px;
-
-}
-.navigation ul li
-{
-    position: relative;
-    list-style: none;
-    width: 70px;
-    height: 70px;
-    z-index: 1;
-}
-.navigation ul li a
-{
-    position: relative;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    font-weight: 500;
 }
-.navigation ul li a .icon
-{
-    position: relative;
-    display: block;
-    line-height: 75px;
-    font-size: 20px;
-    text-align: center;
-    transition: 0.5s;
-    color:white;
+.navbar{
+    display: flex;
 }
-.navigation ul li:hover a .icon
-{
-    transform: translateY(-35px);
-
-}
-.navigation ul li a .text
-{
-    position: absolute;
+.navbar li a{
     color: white;
-    font-weight: 400;
-    font-size: 1.4em;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
-    opacity: 0;
-    transform: translateY(20px);
+    font-size: 1.1rem;
+    font-weight: 500;
+    padding: 5px 0;
+    margin: 0px 30px;
+    transition: all .50s ease;
 }
-.navigation ul li:hover a .text
-{
-    opacity: 1;
-    transform: translateY(10px);
+.navbar li a:hover{
+    color: #E94B3cff;
 }
+.main{
+    display: flex;
+    align-items: center;
+}
+.main a{
+    margin-right: 25px;
+    margin-left: 10px;
+    color: #00203fff;
+    font-size: 1.1rem;
+    font-weight: 500;
+    transition: all .50s ease;
+}
+.main a:hover{
+    color: #E94B3cff;
+}
+.user{
+    display: flex;
+    align-items: center;
 
-
-
-
+}
+.user span{
+    color: #E94B3cff;
+    font-size: 28px;
+    margin-right: 7px;
+}
+.sub_head1{
+    height: 50%;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+}
+.sub_head3{
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
