--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,40 +1,27 @@
+<section class="heading">
+    <div class="head">
+    <!--<div class="sub_head1">
+        <img src="assets\logo2.png" alt="logo" height="90%" width="90%">
+    </div>
+-->
+    <!---
+    <div class="sub_head2">
+        <ul class="navbar">
+            <li class="home"><a href="#">Home</a></li>
+            <li class="search"><a href="#">Search</a></li>
+            <li class="contact"><a href="#">Contact</a></li>
 
-<div class="main_body">
-    <div class="navigation">
-        <ul>
-            <li class="list">
-                <a href="#">
-                    <span class="icon">
-                        <span class="material-symbols-outlined">home</span>
-                    </span>
-                    <span class="text">Home</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon">
-                        <span class="material-symbols-outlined">search</span>
-                    </span>
-                    <span class="text">Search</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon">
-                        <span class="material-symbols-outlined">mail</span>
-                    </span>
-                    <span class="text">Request</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon">
-                        <span class="material-symbols-outlined">person</span>
-                    </span>
-                    <span class="text">Profile</span>
-                </a>
-            </li>
         </ul>
-     </div>
-</div>>
-
+    </div>
+    -->
+    <div class="sub_head3">
+        <div class="main">
+            <a href="#" class="user">
+                <span class="material-symbols-outlined">person</span>
+                Sign-In
+            </a>
+            <a href="#" class="register">Register</a>
+        </div>
+    </div>
+    </div>
+</section>
