--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,163 +1,483 @@
+.homie{
+    background-color: white;
+    min-height: 90vh;
+}
+.head{
+    background-color: #00203fff;
+    height: 10vh;
+    width: 100%;
 
-.wallpaper{
-    margin: 0px;
-    padding: 0px;
-    background: #000;
-    justify-content: center;
-
-
+}
+.mainbox{
+    position: relative;
+    display: flex;
+}
+.left{
+    
+    width: 70%;
+    height: 90vh;
+    
+}
+.right{
+    
+    width: 30%;
+    
+    height: 90vh;
 }
 .search{
     width: 100%;
-    height: 70px;
-    align-items: center;
-    justify-content: center;
+    height: 15vh;
     display: flex;
-    border: 0;
-    z-index: 9;
-    position: absolute;
-    top: 350px;
-    overflow: hidden;
+    align-items: flex-start;
+    justify-content: center;
+    
 }
-.search_bar{
+.search_right{
     width: 100%;
-    max-width: 700px;
-    background: rgba(255,255,255,0.2);
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+/* filters component css*/
+.filters{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    align-items:flex-start;
+    justify-content: center;
+}
+.filters .col1{
+    height: 80%;
+    width: 10%;
+    margin-right:1% ;
     display: flex;
     align-items: center;
-    border-radius: 60px;
-    padding: 10px 20px;
-    height: 60px;
+    justify-content: center;
+    padding: 0.5rem;
+    
 }
-.search_bar input{
-    background: transparent;
-    border: 0;
-    flex: 1;
-    outline: none;
-    padding: 24px 20px;
-    font-size: 20px;
-    color: white;
-}
-::placeholder{
-    color: white;
-}
-
-.search_bar button{
-    border-radius: 50%;
-    border: 0;
-    width: 60px;
-    height: 60px;
-    background: transparent;
-    cursor: pointer;
-}
-
-/* wallpaper css style
-.container{
-    background: #000;
-}*/
-.row{
-    display: inline-flex;
-    margin-top: -32px;
-    margin-left: -50px;
+.filters .col2{
+    
+    height: 80%;
+    width: 10%;
+    margin-right:1% ;
+    display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0.5rem;
 
 }
-.row:nth-child(even)
-{
-    margin-left: 2px;
+.filters .col3{
+    
+    height: 80%;
+    width: 10%;
+    margin-right:1% ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
 }
-.hexagon{
-    width: 100px;
-    height: 110px;
-    background-color: #111;
-    margin: 2px;
-    clip-path: polygon(50% 0, 100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
-    animation: animation 4s linear infinite;
-    transition: 1s;
+.filters .col4{
+    
+    height: 80%;
+    width: 10%;
+    margin-right:1% ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+
+}
+.filters .col5{
+    
+    height: 80%;
+    width: 10%;
+    margin-right:1% ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+}
+.filters .col6{
+    
+    height: 80%;
+    width: 12%;
+    margin-right:1% ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
 }
 
-.hexagon:hover{
-    background-color: #0f0;
-    transition: 0s;
+.select-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #F0F0F0;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    border: 1px solid rgb(207, 207, 207);
+    height: 100%;
+    width: 100%;
+    border-radius: 0.4rem;
+    
 }
-@keyframes animation {
-    0%
-    {
-        filter: hue-rotate(0deg);
-    }
-    100%
-    {
-        filter: hue-rotate(360deg);
-    }
+/*button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 0.4rem;
+}*/
+.select-btn .btn-text{
+    display: flex;
+    color: #333;
+    font-size: 1.2vw;
+    text-align: center;
+}
+#arrow-dwn{
+    display: flex;
+    font-size: 1vw;
+    align-items: center;
+    justify-self: center;
+}
+
+/* Filters drop down menu css start here*/
+
+
+.menu_box4{
+    height: 10%;
+    z-index: 1000;
+    width: 7%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    background-color: red;
+    left: 34.25vw;
+    
+}
+.menu_box5{
+    height: 10%;
+    width: 7%;    
+    z-index: 1000;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    background-color: red;
+    left: 42vw;
+    
+}
+/* Filters drop down menu css end here*/
+
+/*Filters css ends here*/
+
+/*Result box css starts here*/
+.display{
+    position: relative;
+    height: 65vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center; 
+    
+}
+.results{
+    position: relative;
+    height: 65vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items:center;
     
 }
 
-.hexagon::after{
-    content: '';
-    position: absolute;
-    top: 4px;
-    bottom: 4px;
-    left: 4px;
-    right: 4px;
-    background-color: #111;
-    clip-path: polygon(50% 0, 100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+.result_box1 {
+    height: 50vh;
+    width: 40%;
+    margin-right: 4%;
+    border-radius: 5%;
+    border: 1px solid rgb(207, 207, 207);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    padding: 1%;
 }
-.hexagon::before{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(255,255,255,0.03);
-    z-index: 2;
+.result_box2 {
+    height: 50vh;
+    width: 40%;
+    border-radius: 5%;
+    border: 1px solid rgb(207, 207, 207);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    padding: 1%;
 }
-
-.half_hexagon{
-    width: 100px;
-    height: 110px;
-    background-color: #111;
-    margin: 2px;
-    clip-path: polygon(50% 0,50% 100%,0% 75%,0% 25%);
-    animation: animation 4s linear infinite;
-    transition: 1s;
-}
-.half_hexagon:hover{
-    background-color: #0f0;
-    transition: 0s;
-}
-.half_hexagon::after{
-    content: '';
-    position: absolute;
-    top: 4px;
-    bottom: 4px;
-    left: 4px;
-    right: 4px;
-    background-color: #111;
-    clip-path: polygon(50% 0,50% 100%,0% 75%,0% 25%);
-}
-.half_hexagon::before{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(255,255,255,0.03);
-    z-index: 2;
-}
-/*.container{
-    position: relative;
-    background-color:black;
-}*/
-.gap{
-    height: 30px;
+.r1{
     width: 100%;
-    background-color: black;
+    height: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.r1_pic{
+    width: 95%;
+    height: 90%;
+    border-radius: 5%;
+}
+.r1_img{
+    border-radius: 5%;
+}
+.r2{
+    width: 100%;
+    height: 25%;
+}
+
+.r2_box1{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+.r2_box1 .r2_c1{
+    height: 95%;
+    width: 70%;
+    margin-left: 2%;
+    display: flex;
+    align-items:center;
+}
+.r2_box1 .r2_c2{
+    height: 95%;
+    width: 20%;
+    margin-right: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box_rating{
+    width: 60%;
+    height: 70%;
+    border-radius: 20%;
+    color: white;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    background-color: #32751d;
+    
+}
+#star_icon{
+    font-size: 1.5vw;
+}
+#dist_icon{
+    font-size: 1vw;
+}
+.r2_box2{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.r2_box2 .r2_c1{
+    height: 95%;
+    width: 70%;
+    margin-left: 2%;
+    display: flex;
+    align-items:center;
+}
+.r2_box2 .r2_c2{
+    height: 95%;
+    width: 20%;
+    margin-right: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box_distance{
+    width: 60%;
+    height: 70%;
+    background-color: grey;
+    border-radius: 10%;
+    color: white;
+    font-size: 1vw;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    
+}
+.info_box {
+    margin-left: 2%;
+    color: #333;
+    font-size: 1.2vw;
+    
+}
+/*results box css ends here*/
+
+/*Search bar css starts here*/
+.search_container{
+    width: 90%;
+    height: 90%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+.search_box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.search_bar{
+    width: 50vw;
+    height: 8vh;
+    background-color: #F0F0F0;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    display: flex;
+    border-radius: 60px;
+    padding: 10px 20px;
+    align-items: center;
+    
+}
+.search_bar input{
+    width: 30vw;
+    height: 5vh;
+    background: transparent;
+    border: 0;
+    flex: 1;
+    font-size: 20px;
+    padding: 10% 5%;
+    outline: none;
+}
+.search_bar button{
+    border-radius: 50%;
+    border: 0;
+    width: 5vw;
+    height: 5vh;
+    background: transparent;
+    cursor: pointer;
+
+}
+::placeholder{
+    color: black;
 }
 
 
+#opt{
+    width: 8vw;
+    height: 5vh;
+    cursor: pointer;
+    border: 0;
+    border-radius: 3%;
+    outline: none;
+    font-size: 15px;
+    background:transparent;
+    color: black;
+
+}
+/* search bar css ends here*/
 
 
+/*select drop down css starts here*/
+a,
+button {
+  font-family: "Poppins", sans-serif;
+}
+
+.drop_menu
+{
+  position: relative;
+}
+
+.drop_menu ul
+{
+  margin-top: 20px;
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 8vw;
+  height: 20vh;
+  background-color: #F0F0F0;
+  left: 0px;
+  list-style: none;
+  border-radius: 5%;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-15px);
+  transition: all 0.4s ease;
+  z-index: 1000;
+  box-shadow: 2px 2px 10px #E94b3cff;
+  border: 1px solid rgb(207, 207, 207);
+}
+.drop_menu li
+{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+}
+
+.drop_menu li:hover
+{
+  background-color:#e94b3cff;
+  border-radius: 5%;
+  
+}
+
+.drop_menu a{
+  color: black;
+  text-decoration: none;
+}
+
+.drop_menu button{
+  
+  font-size: 1.2vw;
+  font-weight: lighter;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 0.4rem;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  color: #333;
+  text-align: center;
+  background-color: #F0F0F0;
 
 
+}
 
+.drop_menu button:focus + ul{
+  opacity: 1;
+  pointer-events:fill;
+  transform: translateY(0px);
+}
+.drop_menu button:hover{
+    color: #e94b3cff;
+    transition: all 0.50s ease;
+}
+button{
+    border: none;
+    outline: none;
+}
+
+/*select drop down css ends here*/
 
 
