--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,12 +2,7 @@
     background-color: white;
     min-height: 100vh;
 }
-.head{
-    background-color: #00203fff;
-    height: 10vh;
-    width: 100%;
 
-}
 .mainbox{
     position: relative;
     display: flex;
@@ -15,13 +10,15 @@
 }
 .left{
     
-    width: 70%;
+    width: 70vw;
     height: 100vh;
+    
 }
 .right{
     
-    width: 30%;
+    width: 30vw;
     height: 100vh;
+    
 }
 .search{
     width: 100%;
@@ -49,7 +46,7 @@
     justify-content:center;
     background-color: transparent;
     position: relative;
-    top: -3vh;
+    top: -2vh;
 }
 .filters .col1{
     height: 80%;
@@ -280,33 +277,25 @@ button{
 .display{
 
     height: 75vh;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    width: 70vw;
     position: relative;
     top: -4vh; 
+    padding-left: 1.5vw;
     
 }
-.results{
-    position: relative;
-    height: 55vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-   
-    
-}
+
 
 .result_box1 {
     height: 50vh;
     width: 20vw;
-    border-radius: 5%;
+    border-radius: 1vw;
     border: 1px solid rgb(207, 207, 207);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    padding: 1%;
-    margin-right: 2%;
-    margin-left: 2%;
+    margin: 1.2vw;
+    background-color: #F0F0F0;
+
 }
+/*
 .result_box2 {
     height: 50vh;
     width: 30%;
@@ -323,29 +312,29 @@ button{
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     padding: 1%;
     margin-left: 2%;
-}
+}*/
 .r1{
-    width: 100%;
-    height: 60%;
+    width: 20vw;
+    height: 30vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .r1_pic{
-    width: 95%;
-    height: 90%;
-    border-radius: 5%;
+    width: 19vw;
+    height: 27vh;
+    border-radius: 2vw;
 }
 .r1_img{
-    border-radius: 5%;
+    border-radius: 1vw;
 }
 .r2{
-    width: 100%;
-    height: 30%;
+    width: 20vw;
+    height: 15vh;
 }
 .r3{
-    height: 10%;
-    width: 100%;
+    height: 5vh;
+    width: 20vw;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -353,8 +342,8 @@ button{
 }
 
 .r2_box1{
-    width: 100%;
-    height: 50%;
+    width: 20vw;
+    height: 7.5vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -380,7 +369,7 @@ button{
     height: 70%;
     border-radius: 20%;
     color: white;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     display: flex;
     justify-content:center;
     align-items: center;
@@ -388,8 +377,19 @@ button{
     
 }
 #star_icon{
-    font-size: 1.5vw;
+    font-size: 1.2vw;
+    
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 40
+
+}
+
 #dist_icon{
     font-size: 1vw;
 }
@@ -504,81 +504,45 @@ button{
 /*user box css starts here*/
 .right_box1{
     height: 20vh;
-    width: 100%;
+    width: 30vw;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    
+    align-items:self-start;
+    justify-content:flex-end;
 }
 .user_box{
-    height: 90%;
-    width: 90%;
+    height: 10vh;
+    width: 10vw;
     display: flex;
     align-items:center;
-    justify-content:flex-start;
+    justify-content:center;
     
 }
-.login_box{
-    height: 45%;
-    width: 45%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-}
-.login_box span{
-    color: #E94B3cff;
-    font-size: 1.5vw;
-    align-items: center;
-    
-    
-}
-.login_box a{
-    
-    color: #00203fff;
-    font-size: 1.5vw;
-    font-weight: 500;
-    transition: all .50s ease;
-    padding: 5px 0;
-    margin: 0px 30px;
-}
-.login_box a:hover{
-    color: #E94B3cff;
-}
-/*
-.sub_head3{
-    height: 100%;
-    width: 30%;
+.user_box button{
+    height: 8vh;
+    width: 8vw;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10vw;
+    background-color: white;
+    
+}
+.user_box span{
+    font-size: 1.5vw;
+    color: #E94b3cff;
+}
+.user_box button:hover{
+    color: #E94b3cff;
+    box-shadow: 2px 2px 10px #E94b3cff;
+    transition: all 0.5s ease-in-out;
 }
 
-.user{
-    display: flex;
-    align-items: center;
 
-}
-.user span{
-    color: #E94B3cff;
-    font-size: 28px;
-    margin-right: 7px;
-}
-
-.main{
-    display: flex;
-    align-items: center;
-}
-.main a{
-    margin-right: 25px;
-    margin-left: 10px;
-    color: #00203fff;
-    font-size: 1.1rem;
-    font-weight: 500;
-    transition: all .50s ease;
-}
-.main a:hover{
-    color: #E94B3cff;
-}
-*/
 /*user box css ends here*/
 
+/*side sig-in popup container*/
+.details_box_component{
+    height: 75vh;
+    width: 30vw;
+}
