--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
     -->
     <div class="sub_head3">
         <div class="main">
-            <a href="#" class="user">
+            <a  class="user" (click)="gotToLogin()">
                 <span class="material-symbols-outlined">person</span>
                 Sign-In
             </a>
