--- a/src/app/merchantsearch/merchantsearch.component.html
+++ b/src/app/merchantsearch/merchantsearch.component.html
@@ -1,1 +1,28 @@
-<p>merchantsearch works!</p>
+
+<app-header></app-header>
+<div class="container">
+
+
+<div class="body_box">
+    <div class="search">
+        <div class="logo_box">
+            <img src="assets/logo2.png" alt="" >
+        </div>
+        <div class="search_box">
+            <form action="" class="search_bar">
+                <select name="" id="opt">
+                    <option value="" >Location</option>
+                    <option value="" >vskp</option>
+                    <option value="" >hyd</option>
+                </select>
+                <input type="search" placeholder="Search">
+                <button type="submit">
+                    <span class="material-symbols-outlined">
+                        search
+                        </span>
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
