Merchant Registration form started

--- a/src/app/merchantregistration/merchantregistration.component.html
+++ b/src/app/merchantregistration/merchantregistration.component.html
@@ -1,3 +1,35 @@
 <app-merchant-header></app-merchant-header>
+<div class="container">
+    <form action="" method="post" class="mRegister_form" target="_blank">
+        <input type="text" placeholder="Restaurant Name" id="Rname" required>
+        <input type="text" placeholder="Restaurant Area" id="Rarea" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Categories " id="Rcategories" required>
+        <input type="text" placeholder="Restaurant Street" id="Rstreet" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Cusines " id="Rcusines" required>
+        <input type="text" placeholder="Restaurant City" id="Rcity" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Services" id="Rservices" required>
+        <input type="text" placeholder="Restaurant Pincode" id="Rpincode" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Open Time" id="Rotime" required>
+        <input type="text" placeholder="Restaurant Latitude" id="Rlatitude" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Close Time" id="Rctime" required>
+        <input type="text" placeholder="Restaurant Longitude" id="Rlongitude" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Starting Year " id="Ryear" required>
+        <input type="text" placeholder="Restaurant minimum price " id="Rmin" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Specials" id="Rspecial" required>
+        <input type="text" placeholder="Restaurant maximum price" id="Rmax" required>
+        <br><br>
+        <input type="text" placeholder="Restaurant Address" id="Raddress">
+        <br><br>
+        <input type="submit" id="submit_bt" value="Submit">
+        <input type="reset" id="reset_bt" value="Clear All">
+        
 
-<p>merchantregistration works!</p>
+    </form>
+</div>
