admin pages integration about to done

--- a/src/app/merchant-header/merchant-header.component.css
+++ b/src/app/merchant-header/merchant-header.component.css
@@ -4,5 +4,9 @@
     min-width: 100vw;
     display: flex;
     align-items: center;
+    justify-content: center;
     
+}
+button{
+    margin-left: 6vw;
 }
