--- a/src/app/merchant-header/merchant-header.component.html
+++ b/src/app/merchant-header/merchant-header.component.html
@@ -1,7 +1,8 @@
 
 <div class="container">
-    <button (click)="gotToMerchantRegister()">Merchant-Register</button>
-    <button (click)="gotToMerchantList()">Merchant-List</button>
-    <button (click)="gotToMerchantReviews()">Merchant-Reviews</button>
-    <button (click)="gotToMerchantUsers()">Merchant-Admins</button>
+    <button (click)="goToMerchantRegister()">Merchant-Register</button>
+    <button (click)="goToMerchantList()">Merchant-List</button>
+    <button (click)="goToMerchantReviews()">Merchant-Reviews</button>
+    <button (click)="goToMerchantUsers()">Merchant-Admins</button>
+    <button (click)="goToDefault()">Log Out</button>
 </div>
