--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -118,6 +118,7 @@
     display: flex;
     justify-content:center;
     align-items: center;
+    background-color: #32751d;
     
 }
 #star_icon{
@@ -323,7 +324,7 @@ justify-content: center;
     padding-left: 0.2vw;
     
 }
-#name_id{
+#user_name{
     height: 6vh;
     width: 20vw;
     margin-left: 10vw;
@@ -336,7 +337,7 @@ justify-content: center;
     background-color: #F0F0F0;
 
 }
-#rid{
+#user_review{
     height: 20vh;
     width: 50vw;
     margin-left: 10vw;
