--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -18,11 +18,12 @@
                 <img src="assets/pic1.jpg" alt="">
             </div>
         </div>
+        <div *ngFor="let menuItem of userMerchantList; let i=index"  >
         <div class="display_box2">
             <div class="display_box2_row1">
                 <div class="display_box2_row1_col1">
                     <span>
-                        <h2>Paradise Biryani</h2>
+                        <h2>{{menuItem.m_name}}</h2>
                     </span>
                 </div>
                 <div class="display_box2_row1_col2">
@@ -34,31 +35,30 @@
             </div>
             <div class="display_box2_row5">
                 <span>Open-Now- </span>
-                <span>11:00-22:00</span>
+                <span>{{menuItem.m_open_time}}-{{menuItem.m_close_time}}</span>
             </div>
             <div class="display_box2_row2">
                 <h4>Cusines:</h4>
-                <span>South-Indian,North-Indian,Arabian,Deserts...</span>
+                <span>  {{menuItem.m_cusines}}</span>
             </div>
             <div class="display_box2_row3">
                 <h4>Area:</h4>
-                <span>Gachibowli,Hyderabad</span>
+                <span>{{menuItem.m_street}},{{menuItem.m_city}}</span>
             </div>
             <div class="display_box2_row4">
                 <h4>Services:</h4>
-                <span class="s1">Dine-In</span>
-                <span class="s2">Takeaway</span>
-                <span class="s3">Delivery</span>
-                <span class="s4">Buffet</span>
+                <span class="s1">{{menuItem.m_services}}</span>
             </div>
             <div class="display_box2_row6">
                 <h4>Special:</h4>
-                <span>Pot Biryani</span>
+                <span>{{menuItem.m_specials}}</span>
             </div>
             <div class="display_box2_row7">
                 <h4>Address:</h4>
-                Plot no 22 & 23, Gachibowli Rd, Vinayak Nagar, Indira Nagar, Gachibowli, Hyderabad, Telangana 500032
+                {{menuItem.m_address}}
+            
             </div>
+        </div>
         </div>
         <div class="display_box3">
             <div class="display_box3_row3">
@@ -76,12 +76,12 @@
                     </div>
                     <div class="review_form_box2">
                         <form action="" class="user_review_form">
-                            <input type="text" name="" id="user_id" placeholder="User Id">
-                            <input type="text" name="" id="name_id" placeholder="User Name">
+                            <input type="text" name="" id="user_id" placeholder="User Id" [(ngModel)] = "reviewModel.user_id" [ngModelOptions]="{standalone: true}">
+                            <input type="text" name="" id="user_name" placeholder="User Name" [(ngModel)] = "reviewModel.user_name" [ngModelOptions]="{standalone: true}">
                             <br><br>
-                            <textarea name="" id="rid" cols="30" rows="10" placeholder="Add your review here"></textarea>
+                            <textarea name="" id="user_review" cols="30" rows="10" placeholder="Add your review here" [(ngModel)] = "reviewModel.user_review" [ngModelOptions]="{standalone: true}"></textarea>
                             <br><br>
-                            <input type="submit" name="" id="form_submit" value="submit">
+                            <input type="submit" name="" id="form_submit" value="submit" (click)="addUserReview()">
                             <input type="reset" name="" id="form_reset" value="cancel">
                         </form>
                         
@@ -96,8 +96,9 @@
             </div>
             
             <div class="display_box3_row2">
+                <div *ngFor="let menuItem of userReviewList; let i=index"  >
                 <div class="review_box">
-                    <div class="review_box1">sampath</div>
+                    <div class="review_box1">{{menuItem.user_name}}</div>
                     <div class="review_box2">
                         <span class="material-symbols-outlined">star</span>
                         <span class="material-symbols-outlined">star</span>
@@ -107,15 +108,11 @@
                     </div>
                     <div class="review_box3">
                         <div class="review_box3_info">
-                            Spicy tasty biryanis to mouth watering tangedi kababs to the sweetest double ka meeta.... 
-                        They are one heck of combo.. their franchises are all over hyderabad but the one thing is its crowd puller...
-                        So always better to order online/over phone if you want privacy and time.
-                        Suggest you to eat chicken biryani if you are spice /masala biryani lover..
-                        If you have facility please drive to them or oder via phone if you are near by the mrp of the products are 
-                        20-40% less to that of prices on food delivery services like zomato/swiggy.
+                            {{menuItem.user_review}}
                         </div>
                         <div class="review_box3_pic"></div>
                     </div>
+                </div>
                 </div>
                  
                 
