admin merchant review page done

--- a/src/app/merchant-list/merchant-list.component.css
+++ b/src/app/merchant-list/merchant-list.component.css
@@ -13,3 +13,12 @@ table {
   tr:nth-child(even) {
     background-color: #dddddd;
   }
+
+.head{
+  width: 100vw;
+  height: 15vh;
+  font-size: 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
